# esp-idf

./: .cproject  .gitignore  .project  CMakeLists.txt  esp-idf.cmake  sdkconfig.h.in  toolchain.cmake
components/: CMakeLists.txt  sdkconfig.h.in
components/app_trace/: CMakeLists.txt
components/app_update/: CMakeLists.txt
components/bootloader/subproject/main/: CMakeLists.txt
components/bootloader_support/: CMakeLists.txt
components/bt/: CMakeLists.txt
components/coap/: CMakeLists.txt
components/cxx/: CMakeLists.txt
components/driver/: CMakeLists.txt
components/esp32/: CMakeLists.txt
components/ethernet/: CMakeLists.txt
components/expat/: CMakeLists.txt
components/fatfs/: CMakeLists.txt
components/freertos/: CMakeLists.txt
components/heap/: CMakeLists.txt
components/jsmn/: CMakeLists.txt
components/json/: CMakeLists.txt
components/libsodium/: CMakeLists.txt
components/log/: CMakeLists.txt
components/lwip/: CMakeLists.txt
components/mbedtls/: CMakeLists.txt
components/mdns/: CMakeLists.txt
components/micro-ecc/: CMakeLists.txt
components/newlib/: CMakeLists.txt
components/nghttp/: CMakeLists.txt
components/nvs_flash/: CMakeLists.txt
components/openssl/: CMakeLists.txt
components/pthread/: CMakeLists.txt
components/sdmmc/: CMakeLists.txt
components/soc/: CMakeLists.txt
components/spi_flash/: CMakeLists.txt
components/tcpip_adapter/: CMakeLists.txt
components/ulp/: CMakeLists.txt
components/vfs/: CMakeLists.txt
components/wear_levelling/: CMakeLists.txt
components/wpa_supplicant/: CMakeLists.txt
components/xtensa-debug-module/: CMakeLists.txt
examples/get-started/hello_world/: build.bat
examples/get-started/hello_world/main/: CMakeLists.txt
