cmake_minimum_required(VERSION 3.5)

project(esp-idf ASM C CXX)

# TODO bootloader only
#add_definitions(-DBOOTLOADER_BUILD=1)

add_definitions(-DESP_PLATFORM)
add_definitions(-DHAVE_CONFIG_H)
add_definitions(-DIDF_VER="DougCMake")

add_subdirectory(components/app_trace)
add_subdirectory(components/app_update)
add_subdirectory(components/bootloader_support)
add_subdirectory(components/bt)
add_subdirectory(components/coap)
add_subdirectory(components/cxx)
add_subdirectory(components/driver)
add_subdirectory(components/esp32)
add_subdirectory(components/ethernet)
add_subdirectory(components/expat)
add_subdirectory(components/fatfs)
add_subdirectory(components/freertos)
add_subdirectory(components/heap)
add_subdirectory(components/jsmn)
add_subdirectory(components/json)
add_subdirectory(components/libsodium)
add_subdirectory(components/log)
add_subdirectory(components/lwip)
add_subdirectory(components/mbedtls)
add_subdirectory(components/mdns)
add_subdirectory(components/micro-ecc)
add_subdirectory(components/newlib)
add_subdirectory(components/nghttp)
add_subdirectory(components/nvs_flash)
add_subdirectory(components/sdmmc)
add_subdirectory(components/soc)
add_subdirectory(components/spi_flash)
add_subdirectory(components/tcpip_adapter)
add_subdirectory(components/wpa_supplicant)
add_subdirectory(components/xtensa-debug-module)
add_subdirectory(components/vfs)
add_subdirectory(components/wear_levelling)

configure_file(sdkconfig.h.in sdkconfig.h)
