add_subdirectory(app_trace)
add_subdirectory(app_update)
add_subdirectory(bootloader_support)
add_subdirectory(bt)
add_subdirectory(coap)
add_subdirectory(cxx)
add_subdirectory(driver)
add_subdirectory(esp32)
add_subdirectory(ethernet)
add_subdirectory(expat)
add_subdirectory(fatfs)
add_subdirectory(freertos)
add_subdirectory(heap)
add_subdirectory(jsmn)
add_subdirectory(json)
add_subdirectory(libsodium)
add_subdirectory(log)
add_subdirectory(lwip)
add_subdirectory(mbedtls)
add_subdirectory(mdns)
add_subdirectory(micro-ecc)
add_subdirectory(newlib)
add_subdirectory(nghttp)
add_subdirectory(nvs_flash)
add_subdirectory(openssl)
add_subdirectory(sdmmc)
add_subdirectory(soc)
add_subdirectory(spi_flash)
add_subdirectory(tcpip_adapter)
add_subdirectory(ulp)
add_subdirectory(wpa_supplicant)
add_subdirectory(xtensa-debug-module)
add_subdirectory(vfs)
add_subdirectory(wear_levelling)

configure_file(sdkconfig.h.in ${CMAKE_BINARY_DIR}/sdkconfig.h)
