add_subdirectory(app_update)
add_subdirectory(app_trace)
add_subdirectory(bootloader_support)
add_subdirectory(driver)
add_subdirectory(esp32)
add_subdirectory(ethernet)
add_subdirectory(freertos)
add_subdirectory(heap)
add_subdirectory(log)
add_subdirectory(lwip)
add_subdirectory(mbedtls)
add_subdirectory(micro-ecc)
add_subdirectory(newlib)
add_subdirectory(nvs_flash)
add_subdirectory(spi_flash)
add_subdirectory(soc)
add_subdirectory(tcpip_adapter)
add_subdirectory(vfs)
add_subdirectory(wpa_supplicant)
add_subdirectory(xtensa-debug-module)

if(NOT BOOTLOADER_BUILD)
    add_subdirectory(bt)
    add_subdirectory(pthread)
endif()

configure_file(sdkconfig.h.in ${CMAKE_BINARY_DIR}/include/sdkconfig.h)
configure_file(esp32.ld.in ${CMAKE_BINARY_DIR}/ld/esp32.ld)
