add_library(esp32 STATIC
	panic.c)

target_include_directories(esp32 PUBLIC
	include
	$<TARGET_PROPERTY:driver,INTERFACE_INCLUDE_DIRECTORIES>
	$<TARGET_PROPERTY:freertos,INTERFACE_INCLUDE_DIRECTORIES>
	$<TARGET_PROPERTY:soc,INTERFACE_INCLUDE_DIRECTORIES>
	$<TARGET_PROPERTY:tcpip_adapter,INTERFACE_INCLUDE_DIRECTORIES>
)

target_include_directories(esp32 PRIVATE 
	$<TARGET_PROPERTY:app_trace,INTERFACE_INCLUDE_DIRECTORIES>
	$<TARGET_PROPERTY:spi_flash,INTERFACE_INCLUDE_DIRECTORIES>
)
