add_library(esp32 STATIC
    brownout.c
    cache_err_int.c
    clk.c
    core_dump.c
    cpu_start.c
    crosscore_int.c
    dport_access.c
    dport_panic_highint_hdl.S
    esp_timer.c
    esp_timer_esp32.c
    ets_timer_legacy.c
    event_default_handlers.c
    event_loop.c
    fast_crypto_ops.c
    freertos_hooks.c
    gdbstub.c
    hw_random.c
    int_wdt.c
    intr_alloc.c
    ipc.c
    lib_printf.c
    panic.c
    phy_init.c
    pm_esp32.c
    pm_locks.c
    pm_trace.c
    restore.c
    sleep_modes.c
    smartconfig.c
    spiram.c
    spiram_psram.c
    stack_check.c
    system_api.c
    task_wdt.c
    wifi_init.c
    wifi_internal.c
    hwcrypto/aes.c
    hwcrypto/sha.c
)

target_include_directories(esp32 PUBLIC
    include
    $<TARGET_PROPERTY:driver,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:freertos,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:soc,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:tcpip_adapter,INTERFACE_INCLUDE_DIRECTORIES>   
)

target_include_directories(esp32 PRIVATE
    include/xtensa
    $<TARGET_PROPERTY:app_trace,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:bootloader_support,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:ethernet,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:log,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:mbedtls,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:newlib,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:nvs_flash,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:spi_flash,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:wpa_supplicant,INTERFACE_INCLUDE_DIRECTORIES>
)
