add_library(sodium STATIC
	private/randombytes_esp32.c
	libsodium/src/libsodium/crypto_aead/chacha20poly1305/sodium/aead_chacha20poly1305.c
	libsodium/src/libsodium/crypto_aead/xchacha20poly1305/sodium/aead_xchacha20poly1305.c
	libsodium/src/libsodium/crypto_auth/crypto_auth.c
	libsodium/src/libsodium/crypto_auth/hmacsha256/auth_hmacsha256.c
	libsodium/src/libsodium/crypto_auth/hmacsha512/auth_hmacsha512.c
	libsodium/src/libsodium/crypto_auth/hmacsha512256/auth_hmacsha512256.c
	libsodium/src/libsodium/crypto_box/crypto_box_seal.c
	libsodium/src/libsodium/crypto_box/crypto_box.c
	libsodium/src/libsodium/crypto_box/crypto_box_easy.c
	libsodium/src/libsodium/crypto_box/curve25519xsalsa20poly1305/box_curve25519xsalsa20poly1305.c
	libsodium/src/libsodium/crypto_core/curve25519/ref10/curve25519_ref10.c
	libsodium/src/libsodium/crypto_core/hchacha20/core_hchacha20.c
	libsodium/src/libsodium/crypto_core/hsalsa20/ref2/core_hsalsa20_ref2.c
	libsodium/src/libsodium/crypto_core/hsalsa20/core_hsalsa20.c
	libsodium/src/libsodium/crypto_core/salsa/ref/core_salsa_ref.c
	libsodium/src/libsodium/crypto_generichash/crypto_generichash.c
	libsodium/src/libsodium/crypto_generichash/blake2b/generichash_blake2.c
	libsodium/src/libsodium/crypto_generichash/blake2b/ref/blake2b-compress-avx2.c
	libsodium/src/libsodium/crypto_generichash/blake2b/ref/blake2b-compress-ref.c
	libsodium/src/libsodium/crypto_generichash/blake2b/ref/blake2b-compress-ssse3.c
	libsodium/src/libsodium/crypto_generichash/blake2b/ref/blake2b-compress-sse41.c
	libsodium/src/libsodium/crypto_generichash/blake2b/ref/blake2b-ref.c
	libsodium/src/libsodium/crypto_generichash/blake2b/ref/generichash_blake2b.c
	libsodium/src/libsodium/crypto_hash/crypto_hash.c
	libsodium/src/libsodium/crypto_hash/sha256/hash_sha256.c
	libsodium/src/libsodium/crypto_hash/sha256/cp/hash_sha256_cp.c
	libsodium/src/libsodium/crypto_hash/sha512/hash_sha512.c
	libsodium/src/libsodium/crypto_hash/sha512/cp/hash_sha512_cp.c
	libsodium/src/libsodium/crypto_kdf/blake2b/kdf_blake2b.c
	libsodium/src/libsodium/crypto_kdf/crypto_kdf.c
	libsodium/src/libsodium/crypto_kx/crypto_kx.c
	libsodium/src/libsodium/crypto_onetimeauth/crypto_onetimeauth.c
	libsodium/src/libsodium/crypto_onetimeauth/poly1305/onetimeauth_poly1305.c
	libsodium/src/libsodium/crypto_onetimeauth/poly1305/donna/poly1305_donna.c
	libsodium/src/libsodium/crypto_pwhash/argon2/argon2.c
	libsodium/src/libsodium/crypto_pwhash/argon2/argon2-core.c
	libsodium/src/libsodium/crypto_pwhash/argon2/argon2-encoding.c
	libsodium/src/libsodium/crypto_pwhash/argon2/argon2-fill-block-ref.c
	libsodium/src/libsodium/crypto_pwhash/argon2/argon2-fill-block-ssse3.c
	libsodium/src/libsodium/crypto_pwhash/argon2/blake2b-long.c
	libsodium/src/libsodium/crypto_pwhash/argon2/pwhash_argon2i.c
	libsodium/src/libsodium/crypto_pwhash/crypto_pwhash.c
	libsodium/src/libsodium/crypto_pwhash/scryptsalsa208sha256/scrypt_platform.c
	libsodium/src/libsodium/crypto_pwhash/scryptsalsa208sha256/pwhash_scryptsalsa208sha256.c
	libsodium/src/libsodium/crypto_pwhash/scryptsalsa208sha256/crypto_scrypt-common.c
	libsodium/src/libsodium/crypto_pwhash/scryptsalsa208sha256/pbkdf2-sha256.c
	libsodium/src/libsodium/crypto_pwhash/scryptsalsa208sha256/nosse/pwhash_scryptsalsa208sha256_nosse.c
	libsodium/src/libsodium/crypto_scalarmult/crypto_scalarmult.c
	libsodium/src/libsodium/crypto_scalarmult/curve25519/scalarmult_curve25519.c
	libsodium/src/libsodium/crypto_scalarmult/curve25519/ref10/x25519_ref10.c
	libsodium/src/libsodium/crypto_secretbox/crypto_secretbox_easy.c
	libsodium/src/libsodium/crypto_secretbox/crypto_secretbox.c
	libsodium/src/libsodium/crypto_secretbox/xsalsa20poly1305/secretbox_xsalsa20poly1305.c
	libsodium/src/libsodium/crypto_shorthash/crypto_shorthash.c
	libsodium/src/libsodium/crypto_shorthash/siphash24/shorthash_siphashx24.c
	libsodium/src/libsodium/crypto_shorthash/siphash24/shorthash_siphash24.c
	libsodium/src/libsodium/crypto_shorthash/siphash24/ref/shorthash_siphash24_ref.c
	libsodium/src/libsodium/crypto_shorthash/siphash24/ref/shorthash_siphashx24_ref.c
	libsodium/src/libsodium/crypto_sign/crypto_sign.c
	libsodium/src/libsodium/crypto_sign/ed25519/sign_ed25519.c
	libsodium/src/libsodium/crypto_sign/ed25519/ref10/keypair.c
	libsodium/src/libsodium/crypto_sign/ed25519/ref10/obsolete.c
	libsodium/src/libsodium/crypto_sign/ed25519/ref10/open.c
	libsodium/src/libsodium/crypto_sign/ed25519/ref10/sign.c
	libsodium/src/libsodium/crypto_stream/chacha20/stream_chacha20.c
	libsodium/src/libsodium/crypto_stream/chacha20/ref/chacha20_ref.c
	libsodium/src/libsodium/crypto_stream/crypto_stream.c
	libsodium/src/libsodium/crypto_stream/salsa20/stream_salsa20.c
	libsodium/src/libsodium/crypto_stream/salsa20/ref/salsa20_ref.c
	libsodium/src/libsodium/crypto_stream/xsalsa20/stream_xsalsa20.c
	libsodium/src/libsodium/crypto_verify/sodium/verify.c
	libsodium/src/libsodium/randombytes/randombytes.c
	libsodium/src/libsodium/sodium/core.c
	libsodium/src/libsodium/sodium/runtime.c
	libsodium/src/libsodium/sodium/utils.c
	libsodium/src/libsodium/sodium/version.c
)

target_include_directories(sodium PRIVATE
	libsodium/src/libsodium/include
	libsodium/src/libsodium/include/sodium
	port_include/sodium
	$<TARGET_PROPERTY:esp32,INTERFACE_INCLUDE_DIRECTORIES>
)

target_compile_definitions(sodium PRIVATE
	CONFIGURED
	NATIVE_LITTLE_ENDIAN
	HAVE_WEAK_SYMBOLS
	__STDC_LIMIT_MACROS
	__STDC_CONSTANT_MACROS
)

target_compile_options(sodium PRIVATE
	-Wno-unknown-pragmas
)
 

